refactor: shorten models